adding item functionality

--- a/iventory-fe/src/index.css
+++ b/iventory-fe/src/index.css
@@ -6,6 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+input,
+textarea {
+  padding-left: 1rem;
+}
+/* ::placeholder {
+  padding-left: 1rem;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
